--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: While42
 email: your-email@domain.com
-description: French Tech Engineers Alumni Network
+description: French Tech Engineers Network
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://while42.org" # the base hostname & protocol for your site
 twitter_username: while42
