--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: your-email@domain.com
 description: French Tech Engineers Network
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://while42.org" # the base hostname & protocol for your site
-twitter_username: while42
+twitter_username: while_42
 github_username:  while42-org
 
 destination: ./_site
